add auth files
